[unrelated] Fix Java 10 new Integer etc deprecations