@@ -4,7 +4,7 @@
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/legal/epl-v20.html
- * 
+ *
  * Contributors:
  *   IBM - Initial API and implementation
  *   Zeligsoft - Bug 207365
@@ -41,8 +41,8 @@ import org.eclipse.uml2.uml.Classifier;
  */
 @SuppressWarnings("restriction")
 public class IntegerLiteralExpImpl
-		extends NumericLiteralExpImpl
-		implements IntegerLiteralExp {
+extends NumericLiteralExpImpl
+implements IntegerLiteralExp {
 
 	/**
 	 * The default value of the '{@link #getIntegerSymbol() <em>Integer Symbol</em>}' attribute.
@@ -73,7 +73,7 @@ public class IntegerLiteralExpImpl
 	 * @generated
 	 * @ordered
 	 */
-	protected static final Long EXTENDED_INTEGER_SYMBOL_EDEFAULT = new Long(0L);
+	protected static final Long EXTENDED_INTEGER_SYMBOL_EDEFAULT = Long.valueOf(0L);
 
 	/**
 	 * The cached value of the '{@link #getExtendedIntegerSymbol() <em>Extended Integer Symbol</em>}' attribute.
@@ -172,9 +172,9 @@ public class IntegerLiteralExpImpl
 	 */
 	public Long getLongSymbol() {
 		return extendedIntegerSymbol * (1L << Integer.SIZE)
-			+ (integerSymbol != null
+				+ (integerSymbol != null
 				? integerSymbol
-				: 0);
+					: 0);
 	}
 
 	/**
@@ -188,9 +188,9 @@ public class IntegerLiteralExpImpl
 		Long oldExtendedIntegerSymbol = extendedIntegerSymbol;
 		integerSymbol = (int) (newLongSymbol & ((1L << Integer.SIZE) - 1));
 		extendedIntegerSymbol = (newLongSymbol >> Integer.SIZE)
-			+ ((integerSymbol < 0)
-				? 1
-				: 0);
+				+ ((integerSymbol < 0)
+						? 1
+							: 0);
 		if (eNotificationRequired()) {
 			eNotify(new ENotificationImpl(this, Notification.SET,
 				UMLPackage.INTEGER_LITERAL_EXP__EXTENDED_INTEGER_SYMBOL,
@@ -282,17 +282,17 @@ public class IntegerLiteralExpImpl
 		switch (featureID) {
 			case UMLPackage.INTEGER_LITERAL_EXP__INTEGER_SYMBOL :
 				return INTEGER_SYMBOL_EDEFAULT == null
-					? integerSymbol != null
-					: !INTEGER_SYMBOL_EDEFAULT.equals(integerSymbol);
+				? integerSymbol != null
+				: !INTEGER_SYMBOL_EDEFAULT.equals(integerSymbol);
 			case UMLPackage.INTEGER_LITERAL_EXP__EXTENDED_INTEGER_SYMBOL :
 				return EXTENDED_INTEGER_SYMBOL_EDEFAULT == null
-					? extendedIntegerSymbol != null
-					: !EXTENDED_INTEGER_SYMBOL_EDEFAULT
-						.equals(extendedIntegerSymbol);
+				? extendedIntegerSymbol != null
+				: !EXTENDED_INTEGER_SYMBOL_EDEFAULT
+				.equals(extendedIntegerSymbol);
 			case UMLPackage.INTEGER_LITERAL_EXP__LONG_SYMBOL :
 				return LONG_SYMBOL_EDEFAULT == null
-					? getLongSymbol() != null
-					: !LONG_SYMBOL_EDEFAULT.equals(getLongSymbol());
+				? getLongSymbol() != null
+				: !LONG_SYMBOL_EDEFAULT.equals(getLongSymbol());
 		}
 		return super.eIsSet(featureID);
 	}
@@ -362,7 +362,7 @@ public class IntegerLiteralExpImpl
 	@SuppressWarnings("unchecked")
 	public <T, U extends Visitor<T, ?, ?, ?, ?, ?, ?, ?, ?, ?>> T accept(U v) {
 		return ((Visitor<T, Classifier, ?, ?, ?, ?, ?, ?, ?, ?>) v)
-			.visitIntegerLiteralExp(this);
+				.visitIntegerLiteralExp(this);
 	}
 
 } //IntegerLiteralExpImpl
