@@ -7,11 +7,9 @@
  *
  * Contributors:
  *   IBM - Initial API and implementation
- *   E.D.Willink - Lexer and Parser refactoring to support extensibility and flexible error handling 
+ *   E.D.Willink - Lexer and Parser refactoring to support extensibility and flexible error handling
  *******************************************************************************/
 package org.eclipse.ocl.parser;
-
-import lpg.runtime.IPrsStream;
 
 import org.eclipse.emf.common.util.BasicDiagnostic;
 import org.eclipse.emf.common.util.Diagnostic;
@@ -21,6 +19,8 @@ import org.eclipse.ocl.internal.l10n.OCLMessages;
 import org.eclipse.ocl.lpg.AbstractParser;
 import org.eclipse.ocl.lpg.AbstractProblemHandler;
 
+import lpg.runtime.IPrsStream;
+
 /**
  * The <code>OCLProblemHandler</code> accumulates a {@link DiagnosticChain} of
  * problems.
@@ -28,7 +28,7 @@ import org.eclipse.ocl.lpg.AbstractProblemHandler;
 public class OCLProblemHandler extends AbstractProblemHandler {
 
 	private DiagnosticChain diagnostics;
-	
+
 	public OCLProblemHandler(AbstractParser parser) {
 		super(parser);
 	}
@@ -42,7 +42,7 @@ public class OCLProblemHandler extends AbstractProblemHandler {
 			1,
 			problemMessage,
 			new Object[] {processingPhase, processingContext});
-		
+
 		if (diagnostics == null) {
 			diagnostics = diagnostic;
 		} else {
@@ -53,21 +53,21 @@ public class OCLProblemHandler extends AbstractProblemHandler {
 	public Diagnostic getDiagnostic() {
 		return (Diagnostic) diagnostics;
 	}
-	
+
 	@Override
 	public void beginParse() {
 		clearDiagnostic();
 	}
-	
+
 	@Override
 	public void beginValidation() {
 		clearDiagnostic();
 	}
-	
+
 	public void clearDiagnostic() {
 		diagnostics = null;
 	}
-	
+
 	@Override
 	public void parserProblem(Severity problemSeverity, String problemMessage,
 			String processingContext, int startOffset, int endOffset) {
@@ -76,21 +76,21 @@ public class OCLProblemHandler extends AbstractProblemHandler {
 		int rightToken = prsStream.getTokenIndexAtCharacter(endOffset);
 		int leftTokenLoc = (leftToken > rightToken ? rightToken : leftToken);
 		int rightTokenLoc = rightToken;
-	    int line = prsStream.getLine(leftTokenLoc) + getErrorReportLineOffset();
-	    if (line > 0) {
+		int line = prsStream.getLine(leftTokenLoc) + getErrorReportLineOffset();
+		if (line > 0) {
 			String locInfo = OCLMessages.bind(OCLMessages.ErrorReport_RowColumn,
-					new Object[]{
-						new Integer(prsStream.getLine(leftTokenLoc) + getErrorReportLineOffset()),
-						new Integer(prsStream.getColumn(leftTokenLoc)),
-						new Integer(prsStream.getEndLine(rightTokenLoc) + getErrorReportLineOffset()),
-						new Integer(prsStream.getEndColumn(rightTokenLoc))
-				});
+				new Object[]{
+					Integer.valueOf(prsStream.getLine(leftTokenLoc) + getErrorReportLineOffset()),
+					Integer.valueOf(prsStream.getColumn(leftTokenLoc)),
+					Integer.valueOf(prsStream.getEndLine(rightTokenLoc) + getErrorReportLineOffset()),
+					Integer.valueOf(prsStream.getEndColumn(rightTokenLoc))
+			});
 			problemMessage = locInfo + " " + problemMessage; //$NON-NLS-1$
-	    }
-	    handleProblem(problemSeverity, Phase.PARSER, problemMessage,
-				processingContext, startOffset, endOffset);
+		}
+		handleProblem(problemSeverity, Phase.PARSER, problemMessage,
+			processingContext, startOffset, endOffset);
 	}
-	
+
 	/**
 	 * @since 3.0
 	 */
